Bookstore first attempt.